fix: bug og seperating main to header on mobile

--- a/assets/sass/mobilefirst.sass
+++ b/assets/sass/mobilefirst.sass
@@ -16,9 +16,8 @@ body
 
     header
         height: 55px                         
-        width: 80% 
-        margin: auto 
-        /* margin: 50px auto 0px auto */   
+        width: 80%  
+        margin: 90px auto 0px auto   
         background-color: variables.$Primary-color-light
         background-image: url(../../assets/images/undraw_To_do_list_re_9nt7.png)
         background-position: center center
@@ -39,7 +38,6 @@ body
         width: 80%
         border: 1px solid #3838381c 
         box-shadow: 0px 0px 5px 1px #3838381c
-        //margin-top: -200px
 
         .options-container
             display: flex
